Fixed overlapping in order to separate messages.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -831,7 +831,7 @@ input[type="password"] {
    IN-APP MESSAGING
    ============================================================ */
 .in-app-messaging,
-.container {
+.container-msg {
   border: 2px solid #000000;
   background-color: #FF961D;
   border-radius: 6px;
@@ -843,13 +843,13 @@ input[type="password"] {
   background-color: #FFF6D7;
 }
 
-.container::after {
+.container-msg::after {
   content: "";
   clear: both;
   display: table;
 }
 
-.user-time {
+.user-time-msg {
   font-size: .82rem;
   color: rgba(0, 0, 0, 0.3);
 }
